--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -5,10 +5,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="15dp"
-    android:layout_marginVertical="7.5dp"
-    card_view:cardBackgroundColor="@color/gray"
-    card_view:cardCornerRadius="15dp">
+    android:layout_margin="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,20 +23,23 @@
 
         <TextView
             android:id="@+id/rest_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:textSize="18sp"
+            android:text="@string/rest_name"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/favorite_btn"
             app:layout_constraintLeft_toRightOf="@id/rest_img"
             app:layout_constraintBottom_toTopOf="@id/rest_address"
-            app:layout_constraintHorizontal_bias="0.2"/>
+            app:layout_constraintHorizontal_bias="0.2" />
 
         <TextView
             android:id="@+id/rest_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment"
+            android:text="@string/rest_address"
             app:layout_constraintTop_toBottomOf="@id/rest_name"
             app:layout_constraintLeft_toLeftOf="@id/rest_name"
             app:layout_constraintBottom_toTopOf="@id/rest_price"/>
@@ -48,7 +48,7 @@
             android:id="@+id/rest_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment"
+            android:text="@string/rest_price"
             app:layout_constraintTop_toBottomOf="@id/rest_address"
             app:layout_constraintLeft_toLeftOf="@id/rest_address"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -57,13 +57,14 @@
             android:id="@+id/favorite_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:src="@android:drawable/btn_star_big_off"
             android:contentDescription="@string/fav_desc"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@id/rest_name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.8"/>
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
