--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -23,7 +23,8 @@
         android:id="@+id/error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_marginHorizontal="20dp"
+        android:textSize="18sp"
         android:textColor="#AD0000"
         app:layout_constraintTop_toBottomOf="@id/message"
         app:layout_constraintRight_toRightOf="parent"
