--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,14 +11,28 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:text="@string/login_fragment_title"
         android:textColor="@color/purple_500"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/error"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintVertical_bias="0.05"/>
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxWidth="300dp"
+        android:textColor="#AD0000"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/email_label"
@@ -26,7 +40,7 @@
         android:layout_height="wrap_content"
         android:text="@string/email_label_text"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/error"
         app:layout_constraintRight_toLeftOf="@id/email_input"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/password_label"/>
@@ -41,7 +55,8 @@
         app:layout_constraintTop_toTopOf="@id/email_label"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/email_label"
-        app:layout_constraintBottom_toBottomOf="@id/email_label"/>
+        app:layout_constraintBottom_toBottomOf="@id/email_label"
+        android:importantForAutofill="no" />
 
     <TextView
         android:id="@+id/password_label"
@@ -64,7 +79,8 @@
         app:layout_constraintTop_toTopOf="@id/password_label"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/password_label"
-        app:layout_constraintBottom_toBottomOf="@id/password_label"/>
+        app:layout_constraintBottom_toBottomOf="@id/password_label"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/login_button"
