--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -2,7 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/current_fragment"
+    android:id="@+id/fragment_container_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.StartActivity">
