--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -8,7 +8,7 @@
     tools:context=".fragment.FilterFragment">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/filter_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/filter_fragment_title"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:text="@string/listed_data_text"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/filter_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/listed_data_radio_group"
@@ -163,14 +163,25 @@
 
     </RadioGroup>
 
+
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/back_button_text"
+        app:layout_constraintTop_toBottomOf="@+id/price_radio_group"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/save_button"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <Button
         android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save_button_text"
-        app:layout_constraintTop_toBottomOf="@+id/price_radio_group"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/back_button"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintLeft_toRightOf="@id/back_button"
+        app:layout_constraintBottom_toBottomOf="@id/back_button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
