--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
     tools:context=".fragment.LoginFragment">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
@@ -18,19 +18,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/error"
+        app:layout_constraintBottom_toTopOf="@id/login_error"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintVertical_bias="0.05"/>
 
     <TextView
-        android:id="@+id/error"
+        android:id="@+id/login_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="300dp"
         android:textColor="#AD0000"
         android:textSize="18sp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/login_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -42,7 +42,7 @@
         android:minWidth="200dp"
         android:inputType="textEmailAddress"
         android:hint="@string/email_input_hint"
-        app:layout_constraintTop_toBottomOf="@id/error"
+        app:layout_constraintTop_toBottomOf="@id/login_error"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/password_input"
@@ -67,12 +67,12 @@
         android:layout_height="wrap_content"
         android:text="@string/login_button_text"
         app:layout_constraintTop_toBottomOf="@id/password_input"
-        app:layout_constraintRight_toLeftOf="@id/register_button"
+        app:layout_constraintRight_toLeftOf="@id/goto_register_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/goto_register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_button_text"
