--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -37,19 +37,21 @@
 
         <TextView
             android:id="@+id/rest_address"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/rest_address"
             app:layout_constraintTop_toBottomOf="@id/rest_name"
+            app:layout_constraintRight_toLeftOf="@id/favorite_btn"
             app:layout_constraintLeft_toLeftOf="@id/rest_name"
             app:layout_constraintBottom_toTopOf="@id/rest_price"/>
 
         <TextView
             android:id="@+id/rest_price"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/rest_price"
             app:layout_constraintTop_toBottomOf="@id/rest_address"
+            app:layout_constraintRight_toLeftOf="@id/favorite_btn"
             app:layout_constraintLeft_toLeftOf="@id/rest_address"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
