--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,47 +8,167 @@
     tools:context=".fragment.ProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/personal_data_section"
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/personal_data_title"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/personal_data_section"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/personal_data_title"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/purple_500"
-            android:textSize="24sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/hr_line">
 
-        <Button
-            android:id="@+id/edit_button"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
-            android:text="@string/edit_button_text"
-            android:layout_margin="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <TextView
+                android:id="@+id/personal_data_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/personal_data_title"
+                android:layout_marginVertical="20dp"
+                android:textColor="@color/purple_500"
+                android:textSize="24sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/name_label"/>
 
-<!--        <TextView-->
-<!--            android:id="@+id/"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"/>-->
+            <Button
+                android:id="@+id/edit_button"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:text="@string/edit_button_text"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="@id/personal_data_title"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/personal_data_title"/>
 
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"/>-->
+            <TextView
+                android:id="@+id/name_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/name_label"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintTop_toBottomOf="@id/personal_data_title"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/email_label"
+                app:layout_constraintHorizontal_bias="0.2"/>
 
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"/>-->
+            <TextView
+                android:id="@+id/email_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email_label"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintTop_toBottomOf="@id/name_label"
+                app:layout_constraintRight_toRightOf="@id/name_label"
+                app:layout_constraintBottom_toTopOf="@+id/address_label"/>
 
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"/>-->
+            <TextView
+                android:id="@+id/address_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/address_label"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintTop_toBottomOf="@id/email_label"
+                app:layout_constraintRight_toRightOf="@id/email_label"
+                app:layout_constraintBottom_toTopOf="@id/phone_label"/>
+
+            <TextView
+                android:id="@+id/phone_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/phone_label"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintTop_toBottomOf="@id/address_label"
+                app:layout_constraintRight_toRightOf="@id/address_label"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:id="@+id/name_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/name_label"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/name_label"
+                app:layout_constraintBottom_toBottomOf="@id/name_label"
+                app:layout_constraintHorizontal_bias="0.2"/>
+
+            <TextView
+                android:id="@+id/email_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/email_label"
+                app:layout_constraintLeft_toLeftOf="@+id/name_value"
+                app:layout_constraintBottom_toBottomOf="@id/email_label"
+                app:layout_constraintHorizontal_bias="0.25"/>
+
+            <TextView
+                android:id="@+id/address_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/address_label"
+                app:layout_constraintLeft_toLeftOf="@+id/email_value"
+                app:layout_constraintBottom_toBottomOf="@id/address_label"
+                app:layout_constraintHorizontal_bias="0.25"/>
+
+            <TextView
+                android:id="@+id/phone_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/phone_label"
+                app:layout_constraintLeft_toLeftOf="@+id/address_value"
+                app:layout_constraintBottom_toBottomOf="@id/phone_label"
+                app:layout_constraintHorizontal_bias="0.25"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/hr_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/personal_data_section"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/favorites_section"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/favorites_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/hr_line"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:id="@+id/favorites_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/favorites_title"
+                android:layout_marginVertical="20dp"
+                android:textColor="@color/purple_500"
+                android:textSize="24sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/favorites_list"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/favorites_list"
+                android:layout_width="match_parent"
+                android:layout_height="550dp"
+                android:scrollbars="vertical"
+                app:layout_constraintTop_toBottomOf="@id/favorites_title"
+                tools:itemCount="10"
+                tools:listitem="@layout/item_layout" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
