--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -55,12 +55,13 @@
             app:layout_constraintLeft_toLeftOf="@id/rest_address"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/favorite_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
+            android:background="@color/white"
             android:src="@android:drawable/btn_star_big_off"
             android:contentDescription="@string/fav_desc"
             app:layout_constraintTop_toTopOf="parent"
