--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -4,6 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/search_item"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/search_title"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/filter_item"
         android:title="@string/filter_title"
         android:icon="@android:drawable/ic_menu_sort_by_size"
