--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,8 +36,8 @@
 
             <Button
                 android:id="@+id/edit_button"
-                android:layout_width="70dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/edit_button_text"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="@id/personal_data_title"
@@ -94,7 +94,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/name_label"
                 app:layout_constraintBottom_toBottomOf="@id/name_label"
-                app:layout_constraintHorizontal_bias="0.2"/>
+                app:layout_constraintHorizontal_bias="0.25"/>
 
             <TextView
                 android:id="@+id/email_value"
@@ -122,6 +122,58 @@
                 app:layout_constraintLeft_toLeftOf="@+id/address_value"
                 app:layout_constraintBottom_toBottomOf="@id/phone_label"
                 app:layout_constraintHorizontal_bias="0.25"/>
+
+            <EditText
+                android:id="@+id/name_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="200dp"
+                android:inputType="textPersonName"
+                android:autofillHints=""
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@+id/name_label"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/name_label"
+                app:layout_constraintBottom_toBottomOf="@id/name_label"/>
+
+            <EditText
+                android:id="@+id/email_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="200dp"
+                android:inputType="textEmailAddress"
+                android:autofillHints=""
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@+id/email_label"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/email_label"
+                app:layout_constraintBottom_toBottomOf="@id/email_label"/>
+
+            <EditText
+                android:id="@+id/address_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="200dp"
+                android:inputType="text"
+                android:autofillHints=""
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@+id/address_label"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/address_label"
+                app:layout_constraintBottom_toBottomOf="@id/address_label"/>
+
+            <EditText
+                android:id="@+id/phone_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="200dp"
+                android:inputType="phone"
+                android:autofillHints=""
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@+id/phone_label"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/phone_label"
+                app:layout_constraintBottom_toBottomOf="@id/phone_label"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
