--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,9 +36,10 @@
 
             <Button
                 android:id="@+id/edit_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
                 android:text="@string/edit_button_text"
+                android:textSize="12sp"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="@id/personal_data_title"
                 app:layout_constraintRight_toRightOf="parent"
@@ -49,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/name_label"
+                android:textSize="16sp"
                 android:layout_marginVertical="10dp"
                 app:layout_constraintTop_toBottomOf="@id/personal_data_title"
                 app:layout_constraintRight_toRightOf="parent"
@@ -61,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/email_label"
+                android:textSize="16sp"
                 android:layout_marginVertical="10dp"
                 app:layout_constraintTop_toBottomOf="@id/name_label"
                 app:layout_constraintRight_toRightOf="@id/name_label"
@@ -71,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/address_label"
+                android:textSize="16sp"
                 android:layout_marginVertical="10dp"
                 app:layout_constraintTop_toBottomOf="@id/email_label"
                 app:layout_constraintRight_toRightOf="@id/email_label"
@@ -81,6 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/phone_label"
+                android:textSize="16sp"
                 android:layout_marginVertical="10dp"
                 app:layout_constraintTop_toBottomOf="@id/address_label"
                 app:layout_constraintRight_toRightOf="@id/address_label"
@@ -88,49 +93,58 @@
 
             <TextView
                 android:id="@+id/name_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/name_label"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/name_label"
-                app:layout_constraintBottom_toBottomOf="@id/name_label"
-                app:layout_constraintHorizontal_bias="0.25"/>
+                app:layout_constraintBottom_toBottomOf="@id/name_label"/>
 
             <TextView
                 android:id="@+id/email_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/email_label"
-                app:layout_constraintLeft_toLeftOf="@+id/name_value"
-                app:layout_constraintBottom_toBottomOf="@id/email_label"
-                app:layout_constraintHorizontal_bias="0.25"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/email_label"
+                app:layout_constraintBottom_toBottomOf="@id/email_label"/>
 
             <TextView
                 android:id="@+id/address_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/address_label"
-                app:layout_constraintLeft_toLeftOf="@+id/email_value"
-                app:layout_constraintBottom_toBottomOf="@id/address_label"
-                app:layout_constraintHorizontal_bias="0.25"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/address_label"
+                app:layout_constraintBottom_toBottomOf="@id/address_label"/>
 
             <TextView
                 android:id="@+id/phone_value"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/phone_label"
-                app:layout_constraintLeft_toLeftOf="@+id/address_value"
-                app:layout_constraintBottom_toBottomOf="@id/phone_label"
-                app:layout_constraintHorizontal_bias="0.25"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/phone_label"
+                app:layout_constraintBottom_toBottomOf="@id/phone_label"/>
 
             <EditText
                 android:id="@+id/name_input"
-                android:layout_width="wrap_content"
+                android:visibility="gone"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:minWidth="200dp"
+                android:layout_marginHorizontal="20dp"
                 android:inputType="textPersonName"
                 android:autofillHints=""
-                android:visibility="gone"
+                android:hint="@string/name_input_hint"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/name_label"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/name_label"
@@ -138,12 +152,14 @@
 
             <EditText
                 android:id="@+id/email_input"
-                android:layout_width="wrap_content"
+                android:visibility="gone"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:minWidth="200dp"
+                android:layout_marginHorizontal="20dp"
                 android:inputType="textEmailAddress"
                 android:autofillHints=""
-                android:visibility="gone"
+                android:hint="@string/email_input_hint"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/email_label"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/email_label"
@@ -151,12 +167,14 @@
 
             <EditText
                 android:id="@+id/address_input"
-                android:layout_width="wrap_content"
+                android:visibility="gone"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:minWidth="200dp"
+                android:layout_marginHorizontal="20dp"
                 android:inputType="text"
                 android:autofillHints=""
-                android:visibility="gone"
+                android:hint="@string/address_input_hint"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/address_label"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/address_label"
@@ -164,12 +182,14 @@
 
             <EditText
                 android:id="@+id/phone_input"
-                android:layout_width="wrap_content"
+                android:visibility="gone"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:minWidth="200dp"
+                android:layout_marginHorizontal="20dp"
                 android:inputType="phone"
                 android:autofillHints=""
-                android:visibility="gone"
+                android:hint="@string/phone_input_hint"
+                android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="@+id/phone_label"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/phone_label"
