--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -217,6 +217,19 @@
                 app:layout_constraintTop_toTopOf="@id/phone_label"
                 app:layout_constraintLeft_toRightOf="@id/phone_label"/>
 
+            <Button
+                android:id="@+id/call_btn"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:text="@string/call_btn_text"
+                android:textSize="12sp"
+                android:backgroundTint="#00AA00"
+                app:layout_constraintTop_toTopOf="@id/phone_value"
+                app:layout_constraintLeft_toRightOf="@id/phone_value"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/phone_value"
+                tools:targetApi="lollipop" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -280,13 +293,11 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/image_list"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:minHeight="100dp"
                 app:layout_constraintTop_toBottomOf="@+id/gallery_btn"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:itemCount="10"
                 tools:listitem="@layout/image_layout"/>
